feat: update sign res
Closes #581
