# packages/api/src/codegen/service.generated.ts
@@ -181,7 +181,7 @@ export class PayerService {
       body?: AuthSignParams;
     } = {} as any,
     options: IRequestOptions = {}
-  ): Promise<AuthSignaturePayload> {
+  ): Promise<SignaturePayload> {
     return new Promise((resolve, reject) => {
       let url = basePath + '/api/signAsBridgePayer';
 
@@ -203,7 +203,7 @@ export class PayerService {
       body?: PayerSignParams;
     } = {} as any,
     options: IRequestOptions = {}
-  ): Promise<FeePayerSignaturePayload> {
+  ): Promise<SignaturePayload> {
     return new Promise((resolve, reject) => {
       let url = basePath + '/api/signAsFeePayer';
 
@@ -1500,25 +1500,13 @@ export interface SignedData {
   sig: string;
 }
 
-/** FeePayerSignaturePayload */
-export interface FeePayerSignaturePayload {
+/** SignaturePayload */
+export interface SignaturePayload {
   /**  */
   status: number;
 
   /**  */
-  data: object;
-
-  /**  */
-  message?: string;
-}
-
-/** AuthSignaturePayload */
-export interface AuthSignaturePayload {
-  /**  */
-  status: number;
-
-  /**  */
-  data: object;
+  data: SignedData;
 
   /**  */
   message?: string;
